src/parser/snapshots/camello__parser__statement__tests__statements__success__anonymous_sub_empty_attribute.snap
---
source: src/parser/statement.rs
expression: render_success_tree(&syntax)
---
ROOT@0..22
  SUB_DEF@0..21
    SUB_KW@0..3 "sub"
    WHITESPACE@3..4 " "
    IDENT@4..5 "f"
    WHITESPACE@5..6 " "
    BLOCK_STMT@6..21
      L_BRACE@6..7 "{"
      WHITESPACE@7..8 " "
      STMT@8..20
        ANON_SUB_EXPR@8..19
          SUB_KW@8..11 "sub"
          WHITESPACE@11..12 " "
          ATTR@12..14
            COLON@12..13 ":"
            WHITESPACE@13..14 " "
          BLOCK_STMT@14..19
            L_BRACE@14..15 "{"
            WHITESPACE@15..16 " "
            STMT@16..18
              NUMBER@16..17 "0"
              WHITESPACE@17..18 " "
            R_BRACE@18..19 "}"
        WHITESPACE@19..20 " "
      R_BRACE@20..21 "}"
  NEWLINE@21..22 "\n"
