src/parser/snapshots/camello__parser__statement__tests__statements__success__anonymous_sub_with_prototype.snap
---
source: src/parser/statement.rs
expression: render_success_tree(&syntax)
---
ROOT@0..23
  SUB_DEF@0..22
    SUB_KW@0..3 "sub"
    WHITESPACE@3..4 " "
    IDENT@4..5 "f"
    WHITESPACE@5..6 " "
    BLOCK_STMT@6..22
      L_BRACE@6..7 "{"
      WHITESPACE@7..8 " "
      STMT@8..21
        ANON_SUB_EXPR@8..20
          SUB_KW@8..11 "sub"
          WHITESPACE@11..12 " "
          SUB_PROTOTYPE@12..14
            L_PAREN@12..13 "("
            R_PAREN@13..14 ")"
          WHITESPACE@14..15 " "
          BLOCK_STMT@15..20
            L_BRACE@15..16 "{"
            WHITESPACE@16..17 " "
            STMT@17..19
              NUMBER@17..18 "0"
              WHITESPACE@18..19 " "
            R_BRACE@19..20 "}"
        WHITESPACE@20..21 " "
      R_BRACE@21..22 "}"
  NEWLINE@22..23 "\n"
