src/parser/snapshots/camello__parser__statement__tests__statements__success__if_condition_trailing_comma.snap
---
source: src/parser/statement.rs
expression: render_success_tree(&syntax)
---
ROOT@0..15
  IF_STMT@0..14
    IF_KW@0..2 "if"
    WHITESPACE@2..3 " "
    L_PAREN@3..4 "("
    EXPR_LIST@4..7
      SCALAR_VAR@4..6
        SCALAR_SIGIL@4..5 "$"
        IDENT@5..6 "x"
      COMMA@6..7 ","
    R_PAREN@7..8 ")"
    WHITESPACE@8..9 " "
    BLOCK_STMT@9..14
      L_BRACE@9..10 "{"
      WHITESPACE@10..11 " "
      STMT@11..13
        NUMBER@11..12 "1"
        WHITESPACE@12..13 " "
      R_BRACE@13..14 "}"
  NEWLINE@14..15 "\n"
