src/parser/snapshots/camello__parser__statement__tests__statements__success__lexical_sub_definitions.snap
---
source: src/parser/statement.rs
assertion_line: 953
expression: render_success_tree(&syntax)
---
ROOT@0..78
  SUB_DEF@0..17
    MY_KW@0..2 "my"
    WHITESPACE@2..3 " "
    SUB_KW@3..6 "sub"
    WHITESPACE@6..7 " "
    IDENT@7..10 "foo"
    WHITESPACE@10..11 " "
    BLOCK_STMT@11..17
      L_BRACE@11..12 "{"
      WHITESPACE@12..13 " "
      STMT@13..16
        NUMBER@13..15 "42"
        WHITESPACE@15..16 " "
      R_BRACE@16..17 "}"
  NEWLINE@17..18 "\n"
  SUB_DEF@18..44
    STATE_KW@18..23 "state"
    WHITESPACE@23..24 " "
    SUB_KW@24..27 "sub"
    WHITESPACE@27..28 " "
    IDENT@28..31 "bar"
    SUB_PROTOTYPE@31..34
      L_PAREN@31..32 "("
      SCALAR_SIGIL@32..33 "$"
      R_PAREN@33..34 ")"
    WHITESPACE@34..35 " "
    BLOCK_STMT@35..44
      L_BRACE@35..36 "{"
      WHITESPACE@36..37 " "
      STMT@37..43
        ARRAY_SUBSCRIPTION_EXPR@37..43
          SCALAR_VAR@37..39
            SCALAR_SIGIL@37..38 "$"
            IDENT@38..39 "_"
          L_BRACKET@39..40 "["
          NUMBER@40..41 "0"
          R_BRACKET@41..42 "]"
          WHITESPACE@42..43 " "
      R_BRACE@43..44 "}"
  NEWLINE@44..45 "\n"
  SUB_DEF@45..77
    OUR_KW@45..48 "our"
    WHITESPACE@48..49 " "
    SUB_KW@49..52 "sub"
    WHITESPACE@52..53 " "
    IDENT@53..56 "baz"
    WHITESPACE@56..57 " "
    ATTR@57..65
      COLON@57..58 ":"
      IDENT@58..64 "method"
      WHITESPACE@64..65 " "
    ATTR@65..74
      COLON@65..66 ":"
      IDENT@66..70 "Attr"
      ATTR_ARGS@70..73
        L_PAREN@70..71 "("
        NUMBER@71..72 "1"
        R_PAREN@72..73 ")"
      WHITESPACE@73..74 " "
    BLOCK_STMT@74..77
      L_BRACE@74..75 "{"
      WHITESPACE@75..76 " "
      R_BRACE@76..77 "}"
  NEWLINE@77..78 "\n"
