src/parser/snapshots/camello__parser__statement__tests__statements__success__named_sub_multiple_attributes_single_colon.snap
---
source: src/parser/statement.rs
assertion_line: 953
expression: render_success_tree(&syntax)
---
ROOT@0..51
  SUB_DEF@0..17
    SUB_KW@0..3 "sub"
    WHITESPACE@3..4 " "
    IDENT@4..7 "foo"
    WHITESPACE@7..8 " "
    ATTR@8..14
      COLON@8..9 ":"
      WHITESPACE@9..10 " "
      IDENT@10..11 "A"
      WHITESPACE@11..12 " "
      IDENT@12..13 "B"
      WHITESPACE@13..14 " "
    BLOCK_STMT@14..17
      L_BRACE@14..15 "{"
      WHITESPACE@15..16 " "
      R_BRACE@16..17 "}"
  NEWLINE@17..18 "\n"
  SUB_DEF@18..50
    SUB_KW@18..21 "sub"
    WHITESPACE@21..22 " "
    IDENT@22..25 "bar"
    WHITESPACE@25..26 " "
    SUB_PROTOTYPE@26..29
      L_PAREN@26..27 "("
      SCALAR_SIGIL@27..28 "$"
      R_PAREN@28..29 ")"
    WHITESPACE@29..30 " "
    ATTR@30..47
      COLON@30..31 ":"
      WHITESPACE@31..32 " "
      IDENT@32..37 "attr1"
      WHITESPACE@37..38 " "
      IDENT@38..43 "attr2"
      ATTR_ARGS@43..46
        L_PAREN@43..44 "("
        NUMBER@44..45 "1"
        R_PAREN@45..46 ")"
      WHITESPACE@46..47 " "
    BLOCK_STMT@47..50
      L_BRACE@47..48 "{"
      WHITESPACE@48..49 " "
      R_BRACE@49..50 "}"
  NEWLINE@50..51 "\n"
