src/parser/snapshots/camello__parser__statement__tests__statements__success__postfix_for_modifier.snap
---
source: src/parser/statement.rs
expression: render_success_tree(&syntax)
---
ROOT@0..22
  STMT@0..21
    FUNCTION_CALL_EXPR@0..9
      IDENT@0..5 "print"
      WHITESPACE@5..6 " "
      SCALAR_VAR@6..9
        SCALAR_SIGIL@6..7 "$"
        IDENT@7..8 "_"
        WHITESPACE@8..9 " "
    FOR_MODIFIER@9..20
      FOR_KW@9..12 "for"
      WHITESPACE@12..13 " "
      ARRAY_VAR@13..20
        ARRAY_SIGIL@13..14 "@"
        IDENT@14..20 "values"
    SEMICOLON@20..21 ";"
  NEWLINE@21..22 "\n"
