src/parser/snapshots/camello__parser__statement__tests__statements__success__semicolon_valid_data_section.snap
---
source: src/parser/statement.rs
expression: render_success_tree(&syntax)
---
ROOT@0..15
  STMT@0..6
    FUNCTION_CALL_EXPR@0..6
      IDENT@0..3 "foo"
      L_PAREN@3..4 "("
      R_PAREN@4..5 ")"
      NEWLINE@5..6 "\n"
  DATA_SECTION@6..15
    DATA_KW@6..14 "__DATA__"
    RAW_STRING@14..15 "\n"
