src/parser/snapshots/camello__parser__statement__tests__statements__success__semicolon_valid_end_section.snap
---
source: src/parser/statement.rs
expression: render_success_tree(&syntax)
---
ROOT@0..14
  STMT@0..6
    FUNCTION_CALL_EXPR@0..6
      IDENT@0..3 "foo"
      L_PAREN@3..4 "("
      R_PAREN@4..5 ")"
      NEWLINE@5..6 "\n"
  DATA_SECTION@6..14
    END_KW@6..13 "__END__"
    RAW_STRING@13..14 "\n"
